Added General Improvements     Made it cachable through the manifest

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="mf.php">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Triton</title>
@@ -42,10 +42,6 @@
                 </div>
             </header>
             <ul id="links">
-                <li><a href="#" id="create_new">New Post</a></li>
-                <li><a href="#new" id="new_doc">New Document</a></li>
-                <li><a href="#" id="delete_doc">Delete Document</a></li>
-                <li><a href="#" id="delete_all">Delete All</a></li>
             </ul>
             <div id="overview">
             </div>
