Relocated files with a new structure

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
-<html manifest="mf.php">
+<html manifest="etc/mf.php">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Triton</title>
-        <link href="style.css" rel="stylesheet">
-        <script src="lib.js"></script>
-        <script src="jquery.js"></script>
-        <script src="json.js"></script>
-        <script src="autogrow.js"></script>
-        <script src="hotkeys.js"></script>
-        <script src="Thread.js"></script>
-        <script src="ThreadEncoder.js"></script>
-        <script src="ThreadIndex.js"></script>
-        <script src="TritonSidebar.js"></script>
-        <script src="TritonKUI.js"></script>
-        <script src="TritonEditor.js"></script>
-        <script src="ThreadManager.js"></script>
-        <script src="ThreadSlider.js"></script>
+        <link href="css/style.css" rel="stylesheet">
+        <script src="js/lib.js"></script>
+        <script src="js/jquery.js"></script>
+        <script src="js/json.js"></script>
+        <script src="js/autogrow.js"></script>
+        <script src="js/hotkeys.js"></script>
+        <script src="js/Thread.js"></script>
+        <script src="js/ThreadEncoder.js"></script>
+        <script src="js/ThreadIndex.js"></script>
+        <script src="js/TritonSidebar.js"></script>
+        <script src="js/TritonKUI.js"></script>
+        <script src="js/TritonEditor.js"></script>
+        <script src="js/ThreadManager.js"></script>
+        <script src="js/ThreadSlider.js"></script>
     </head>
     <body>
         <div id="dev">
