Moved Post Displaying Functionality to its own module

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="js/TritonSidebar.js"></script>
         <script src="js/TritonKUI.js"></script>
         <script src="js/TritonEditor.js"></script>
+        <script src="js/TritonPosts.js"></script>
         <script src="js/ThreadManager.js"></script>
         <script src="js/ThreadSlider.js"></script>
     </head>
