Fixed Issue #1     New Post Button now correctly works

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         },
                         "create post" : function(){
                             $('textarea').blur();
-                            var id = thread.createPost("");
+                            var id = editor.current().createPost("");
 
                             // Display the box and focus it
                             editor.draw();
