Added the beginnings of the keyword module     Added TritonKeywords.js     Changed the Thread Suite to give the Thread object access to the editor (and thus the Keywords Module)     Placed the constructor of TritonEditor in a constructor() function so we could pass the editor object into base classes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="js/TritonPosts.js"></script>
         <script src="js/ThreadManager.js"></script>
         <script src="js/ThreadSlider.js"></script>
+        <script src="js/TritonKeywords.js"></script>
     </head>
     <body>
         <div id="dev">
