Added Welcome Screen and Bottom Wash     Welcome Screen is displayed when no posts are active     Bottom Wash allows you to scroll so the bottom of the last post is near the middle of the screen

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Triton</title>
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/welcome.css" rel="stylesheet">
         <script src="js/lib.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/json.js"></script>
@@ -51,6 +52,20 @@
         </nav>
         <div id="posts"></div>
         <pre id="object"></pre>
+        <div id="welcome">
+            <div class="header">
+                <div class="head">
+                    Take Notes.
+                    <em>Now.</em>
+                </div>
+                <div class="desc">
+                    Triton is designed to help you take notes <strong>fast</strong>, anywhere you happen to be.
+                </div>
+            </div>
+            <div class="started">
+                Click <em>New Document</em> to Get Started.
+            </div>
+        </div>
         <script>
             (function(){
                 
