Missing ; in &copy;

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <header>
                 <a id="logo">Triton</a>
                 <div class="meta">
-                    v 0.1. &copy 2010 Tyler Carter
+                    v 0.1. &copy; 2010 Tyler Carter
                 </div>
             </header>
             <ul id="links">
