--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="js/lib.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/json.js"></script>
+		<script src="js/showdown.js"></script>
         <script src="js/autogrow.js"></script>
         <script src="js/hotkeys.js"></script>
         <script src="js/Triton.js"></script>
