Now markdown works in titles too!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/jquery.js"></script>
         <script src="js/json.js"></script>
 		<script src="js/showdown.js"></script>
+		<script src="js/simplemd.js"></script>
         <script src="js/autogrow.js"></script>
         <script src="js/hotkeys.js"></script>
         <script src="js/Triton.js"></script>
