Added Alerts    Triton now updates the version info on startup    You can call TritonEditor.createAlert() to create an alert

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <script src="js/lib.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/json.js"></script>
-		<script src="js/showdown.js"></script>
-		<script src="js/simplemd.js"></script>
+        <script src="js/showdown.js"></script>
+        <script src="js/simplemd.js"></script>
         <script src="js/autogrow.js"></script>
         <script src="js/hotkeys.js"></script>
         <script src="js/Triton.js"></script>
@@ -37,9 +37,6 @@
             </div>
             <header>
                 <a id="logo">Triton</a>
-                <div class="meta">
-                    v 0.1. &copy; 2010 Tyler Carter
-                </div>
             </header>
             <ul id="links">
             </ul>
@@ -55,6 +52,8 @@
         </div>
         <script>
             (function(){
+                // Load Scripts
+
                 // Initialize Triton
                 var editor = window.Triton.TritonEditor(window);
                 editor.init();
