Added a favicon and a logo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Triton</title>
+        <link rel="shortcut icon" href="images/favicon.ico">
         <link href="css/style.css" rel="stylesheet">
         <link href="css/welcome.css" rel="stylesheet">
         <script src="js/lib.js"></script>
@@ -36,7 +37,7 @@
                 </div>
             </div>
             <header>
-                <a id="logo">Triton</a>
+                <a id="logo"><img src="images/logo.png"></a>
             </header>
             <ul id="links">
             </ul>
