Added print stylesheet; misc. CSS changes.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Triton</title>
         <link rel="shortcut icon" href="images/favicon.ico">
-        <link href="css/style.css" rel="stylesheet">
-        <link href="css/welcome.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link href="css/welcome.css" rel="stylesheet" type="text/css">
+        <link href="css/print.css" rel="stylesheet" type="text/css" media="print">
         <script src="js/lib.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/json.js"></script>
