Moved Parsing Functionality to Triton.Parser     Internal links now will display the title of the thread/post linked to on hover     Internal links will now search for a post title that starts with what you typed in. Will select the first match     You can access the last created TritonEditor through window.Triton.editor

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="js/Triton.js"></script>
         <script src="js/Thread.js"></script>
         <script src="js/ThreadEncoder.js"></script>
+        <script src="js/Parser.js"></script>
         <script src="js/ThreadIndex.js"></script>
         <script src="js/TritonSidebar.js"></script>
         <script src="js/TritonKUI.js"></script>
