--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" href="images/favicon.ico">
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <link href="css/welcome.css" rel="stylesheet" type="text/css">
+        <link href="css/compact.css" rel="stylesheet" type="text/css">
         <link href="css/print.css" rel="stylesheet" type="text/css" media="print">
         <script src="js/lib.js"></script>
         <script src="js/jquery.js"></script>
@@ -13,6 +14,7 @@
         <script src="js/showdown.js"></script>
         <script src="js/simplemd.js"></script>
         <script src="js/autogrow.js"></script>
+        <script src="js/timeago.js"></script>
         <script src="js/hotkeys.js"></script>
         <script src="js/Triton.js"></script>
         <script src="js/Thread.js"></script>
