Added Storage module to uniformly load and save data to localStorage

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="js/timeago.js"></script>
         <script src="js/hotkeys.js"></script>
         <script src="js/Triton.js"></script>
+        <script src="js/Storage.js"></script>
         <script src="js/Thread.js"></script>
         <script src="js/Encoder.js"></script>
         <script src="js/Parser.js"></script>
