--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <link href="css/welcome.css" rel="stylesheet" type="text/css">
         <link href="css/compact.css" rel="stylesheet" type="text/css">
-        <link href="css/print.css" rel="stylesheet" type="text/css" media="print">
+        <link href="css/print.css" rel="stylesheet" type="text/css" media="print" >
         <script src="js/lib.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/json.js"></script>
@@ -22,6 +22,7 @@
         <script src="js/Parser.js"></script>
         <script src="js/ThreadIndex.js"></script>
         <script src="js/Sidebar.js"></script>
+        <script src="js/Settings.js"></script>
         <script src="js/KUI.js"></script>
         <script src="js/Editor.js"></script>
         <script src="js/Posts.js"></script>
