--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Triton</title>
         <link rel="shortcut icon" href="images/favicon.ico">
         <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link href="css/typography.css" rel="stylesheet" type="text/css">
         <link href="css/welcome.css" rel="stylesheet" type="text/css">
         <link href="css/compact.css" rel="stylesheet" type="text/css">
         <link href="css/print.css" rel="stylesheet" type="text/css" media="print" >
